@@ -1,3 +1,15 @@
+2003-06-14  Dani Carbonell  <bocata@panete.net>
+
+	* src/commands.c (show_connect_button, show_disconnect_button):
+	new functions, to show and hide the connect button in the toolbar.
+	(make_menus): hide the disconnect button at startup.
+
+	* src/commands.h (show_disconnect_button, show_disconnect_button):
+	new functions.
+
+	* src/tetrinet.c (tetrinet_inmessage): added logic to show and
+	hide the connect/disconnect buttons.
+
 2003-06-13  Dani Carbonell  <bocata@panete.net>
 
 	* src/tetrinet.c (tetrinet_key): fixed this keypress signal
